--- a/action.yml
+++ b/action.yml
@@ -1,1 +1,23 @@
-.github/workflows/build.yml
+name: Build my gitbook and deploy to gh-pages
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
+
+jobs:
+  build-and-deploy:
+    name: Build and deploy
+    runs-on: ubuntu-latest
+    env:
+      MY_SECRET   : ${{ inputs.secret_input }}
+      USER_NAME   : neko2048
+      USER_EMAIL  : show.999991@gmail.com
+      BOOK_DIR    : book_sources
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.1
+    - name: Build and Deploy
+      uses: neko2048/theTrailLog@master
