--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,13 @@ jobs:
     name: Build and deploy
     runs-on: ubuntu-latest
     env:
-      MY_SECRET   : ${{ env.SECRET }}
+      MY_SECRET   : ${{secrets.GH_ACCESS_TOKEN}}
       USER_NAME   : neko2048
       USER_EMAIL  : show.999991@gmail.com
       BOOK_DIR    : book_sources
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2.3.1
+      uses: actions/checkout@v2.4.2
     - name: Build and Deploy
-      uses: neko2048/theTrailLog@master
+      uses: neko2048/theTrailLog@v1.0.1
